# hackaton-pucp-LTGM

./: .gitignore  CONTEXT.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  railway.toml  requirements-dev.txt  requirements.txt
backend/api/: mocks.py  serializers.py  urls.py  views.py
backend/apps/core/: exception_handler.py  exceptions.py
backend/apps/core/health/: __init__.py
backend/apps/core/management/commands/: ingest_data.py
backend/apps/districts/: admin.py  apps.py
backend/apps/districts/api/v1/: checklists_api.py  district_detail_api.py  district_geojson_api.py  district_list_api.py  serializers.py  urls.py
backend/apps/districts/migrations/: 0001_initial.py  0002_remove_checklistitem_text_checklistitem_detail_and_more.py  0003_alter_emergency_sinpad_id.py
backend/apps/districts/models/: __init__.py  checklist_item.py  district.py  emergency.py
backend/apps/districts/selectors/: district_selector.py
backend/apps/districts/services/: district_service.py
backend/apps/enfen/: admin.py  apps.py
backend/apps/enfen/migrations/: 0001_initial.py  0002_enfensummary_bulletin_number_enfensummary_is_active_and_more.py
backend/apps/enfen/models/: __init__.py  enfen_summary.py
backend/apps/enfen/selectors/: enfen_selector.py
backend/apps/enfen/services/: enfen_service.py
backend/config/: settings.py  urls.py
backend/config/settings/: base.py  local.py  production.py
backend/tests/: test_api.py  test_districts.py  test_enfen.py  test_health.py
(+98 files in other folders)
