[project]
name = "vigia-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "django-cors-headers==4.6.0",
    "python-dotenv==1.0.1",
    "gunicorn==23.0.0",
    "psycopg[binary]==3.2.9",
    "dj-database-url==2.3.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-django==4.9.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
pythonpath = ["."]
testpaths = ["tests"]
